--- a/Re-Trek/Base.lproj/Main.storyboard
+++ b/Re-Trek/Base.lproj/Main.storyboard
@@ -157,7 +157,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D4k-jC-l10">
-                                <rect key="frame" x="20" y="20" width="50" height="50"/>
+                                <rect key="frame" x="20" y="75" width="50" height="50"/>
                                 <state key="normal" image="back"/>
                                 <connections>
                                     <segue destination="g7z-6c-DeJ" kind="show" id="HC3-XU-XiZ"/>
@@ -205,7 +205,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eeh-1x-yC5" customClass="RoundedButton" customModule="Re_Trek" customModuleProvider="target">
-                                <rect key="frame" x="291" y="155" width="103" height="30"/>
+                                <rect key="frame" x="280" y="155" width="103" height="30"/>
                                 <color key="backgroundColor" red="0.15294117647058825" green="0.67843137254901964" blue="0.59215686274509804" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Select All">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -213,6 +213,22 @@
                                 <connections>
                                     <action selector="selectAllPressed:" destination="wP6-eu-DuT" eventType="touchUpInside" id="OyR-Os-gRb"/>
                                 </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cfv-3p-dnd" customClass="RoundedButton" customModule="Re_Trek" customModuleProvider="target">
+                                <rect key="frame" x="263" y="77" width="120" height="45"/>
+                                <color key="backgroundColor" red="0.99215686270000003" green="0.5568627451" blue="0.094117647060000004" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
+                                <state key="normal" title="Re-Trek">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B2B-9Y-zJ7" customClass="RoundedButton" customModule="Re_Trek" customModuleProvider="target">
+                                <rect key="frame" x="104" y="77" width="120" height="45"/>
+                                <color key="backgroundColor" red="0.99215686274509807" green="0.55686274509803924" blue="0.094117647058823528" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
+                                <state key="normal" title="Reset">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
